Version 0.9.21
  New Features:
       * #498 Bitmask filter in CreateQuickGame
2015-05-01 Version 0.9.20 (codename: ewokian)
   New Features:
       * Support for Events and Quests
       * Support for Nearby Connections
   Bug Fixes:
       * #275 Plugin crashes when sending invite for iOS RTMP
       * #326 Not always receiving invitations in iOS
       * #363 Save Games not working on iOS
       * #375 Authentication Return calls before initialization done
       * #379 OnPeersDisconnected(string[] participantIds) is never called
       * #443 ERROR_NOT_AUTHORIZED on re-login
       * #453 NO_GPGS causes unreachable code warnings
       * #454 Error building Player: IOException: android-support-v4.jar already exists
Version 0.9.15 (codename: auto-dogey5)
    New Features:
        * #276 Added support for excluding Google Play Game Services for iOS build (NO_GPGS)
    Bug Fixes:
        * #376 Moved Editor scripts into GooglePlayGames/Editor to reduce script sprawl.
        * #331 Corrected Download menu item text.
        * #331 Added support for new android-support jar location.
        * #331 Removed Google play services version check when building.
	* #361 Fixed player image not refreshed when changing players.
        * #318 Removed armeabi libraries which broke Unity 5 building.
        * #371 Unable to reshow Achievement or Leaderboard UI after Home button is pressed
Version 0.9.12 (codename: auto-dogey)
    New features:
        * Refactored AndroidSetup script to facilitate automated builds.
	* Refactored Samples to be packaged as custom packaged Assets vs. projects.
Version 0.9.11 (codename: extra-dogey)
    New features:
        * Image property of IUserProfile implemented
        * An implementation of Saved Games is now available. This obviates the old
          cloud save feature, which is deprecated and will be removed. See
          ISavedGameClient.cs for more details.
    API Changes: