@@ -1,5 +1,6 @@
 Version 0.9.21
   New Features:
+       * #136 Callback for ShowLeaderboardUI()
        * #498 Bitmask filter in CreateQuickGame
 2015-05-01 Version 0.9.20 (codename: ewokian)
    New Features:
